--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           login-server: qhinhprd.azurecr.io
           username: qhinhprd
-          password: yFnwBGn4Cw1baCZ
+          password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and push Frontend image
         run: |
