--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -6,13 +6,15 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Step 2: Log in to Azure Container Registry
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
@@ -20,16 +22,19 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
+      # Step 3: Build and push backend image
       - name: Build and push backend image
         run: |
-          docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./fastapi-backend
+          docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./backend
           docker push qhinhprd.azurecr.io/fastapi-backend:latest
 
+      # Step 4: Build and push frontend image
       - name: Build and push frontend image
         run: |
-          docker build -t qhinhprd.azurecr.io/my-app:latest ./my-app
+          docker build -t qhinhprd.azurecr.io/my-app:latest ./frontend
           docker push qhinhprd.azurecr.io/my-app:latest
 
+      # Step 5: Deploy images to the VM
       - name: Deploy to VM
         run: |
           sshpass -p ${{ secrets.VM_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} "
