--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -6,40 +6,35 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Step 2: Log in to Azure Container Registry
-      - name: Log in to Azure Container Registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: qhinhprd.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
+      with:
+        login-server: qhinhprd.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-      # Step 3: Build and push backend image
-      - name: Build and push backend image
-        run: |
-          docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./backend
-          docker push qhinhprd.azurecr.io/fastapi-backend:latest
+    - name: Build and push backend image
+      run: |
+        docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./backend
+        docker push qhinhprd.azurecr.io/fastapi-backend:latest
 
-      # Step 4: Build and push frontend image
-      - name: Build and push frontend image
-        run: |
-          docker build -t qhinhprd.azurecr.io/my-app:latest ./frontend
-          docker push qhinhprd.azurecr.io/my-app:latest
+    - name: Build and push frontend image
+      run: |
+        docker build -t qhinhprd.azurecr.io/my-app:latest ./frontend
+        docker push qhinhprd.azurecr.io/my-app:latest
 
-      # Step 5: Deploy images to the VM
-      - name: Deploy to VM
-        run: |
-          sshpass -p ${{ secrets.VM_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} "
-            docker pull qhinhprd.azurecr.io/fastapi-backend:latest &&
-            docker run -d -p 8000:8000 qhinhprd.azurecr.io/fastapi-backend:latest &&
-            docker pull qhinhprd.azurecr.io/my-app:latest &&
-            docker run -d -p 3000:3000 qhinhprd.azurecr.io/my-app:latest
-          "
+    - name: Deploy to VM
+      run: |
+        sshpass -p ${{ secrets.VM_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} "
+          docker pull qhinhprd.azurecr.io/fastapi-backend:latest &&
+          docker run -d -p 8000:8000 qhinhprd.azurecr.io/fastapi-backend:latest &&
+          docker pull qhinhprd.azurecr.io/my-app:latest &&
+          docker run -d -p 3000:3000 qhinhprd.azurecr.io/my-app:latest
+        "
