--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -22,12 +22,12 @@ jobs:
 
     - name: Build and push backend image
       run: |
-        docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./backend
+        docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./fastapi-backend
         docker push qhinhprd.azurecr.io/fastapi-backend:latest
 
     - name: Build and push frontend image
       run: |
-        docker build -t qhinhprd.azurecr.io/my-app:latest ./frontend
+        docker build -t qhinhprd.azurecr.io/my-app:latest ./my-app
         docker push qhinhprd.azurecr.io/my-app:latest
 
     - name: Deploy to VM
