--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2  # Check out the repository code
+      uses: actions/checkout@v3  # Check out the repository code
 
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
@@ -36,15 +36,19 @@ jobs:
       run: |
         # Create the .ssh directory and add the private key
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa  # Add the private key from GitHub secrets
-        chmod 600 ~/.ssh/id_rsa  # Set appropriate permissions for the SSH key
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/mykey.pem  # Add the private key from GitHub secrets
+        chmod 600 ~/.ssh/mykey.pem  # Set appropriate permissions for the SSH key
+        # Add the VM to known hosts to avoid SSH authenticity check issues
+        ssh-keyscan -H ${{ secrets.VM_IP }} >> ~/.ssh/known_hosts
 
     - name: Deploy to VM
       run: |
         # SSH into the VM and deploy the containers
-        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} "
+        ssh -o StrictHostKeyChecking=no -i ~/.ssh/mykey.pem ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} "
+          # Pull the backend image and run it
           docker pull qhinhprd.azurecr.io/fastapi-backend:latest &&
           docker run -d -p 8000:8000 qhinhprd.azurecr.io/fastapi-backend:latest &&
+          # Pull the frontend image and run it
           docker pull qhinhprd.azurecr.io/my-app:latest &&
           docker run -d -p 3000:3000 qhinhprd.azurecr.io/my-app:latest
         "
