--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -20,14 +20,27 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }}  # Username from GitHub Secrets
         password: ${{ secrets.ACR_PASSWORD }}  # Password from GitHub Secrets
 
+    - name: Run SonarQube Analysis
+      run: |
+        docker run --rm \
+          -e SONAR_HOST_URL=http://74.225.172.238:9000 \
+          -e SONAR_LOGIN=sqp_651f083982e693c269499b4cc8eeacb4024fb529 \
+          -v $(pwd):/usr/src --workdir /usr/src \
+          sonarsource/sonar-scanner-cli:latest
+      env:
+        SONAR_HOST_URL: http://74.225.172.238:9000
+        SONAR_LOGIN: sqp_651f083982e693c269499b4cc8eeacb4024fb529
+
     - name: Build and push backend image
       run: |
         docker build -t qhinhprd.azurecr.io/fastapi-backend:latest ./fastapi-backend
         docker push qhinhprd.azurecr.io/fastapi-backend:latest
+
     - name: Build and push frontend image
       run: |
         docker build -t qhinhprd.azurecr.io/my-app:latest ./my-app
         docker push qhinhprd.azurecr.io/my-app:latest
+
     - name: Deploy to VM
       uses: appleboy/ssh-action@v0.1.6  # Use appleboy SSH action
       with:
